# crud_pdf

./: .env.aws  .gitignore  Makefile  README.md  pyproject.toml  recycling.db  run.sh  scaling-policy.json
.github/workflows/: e2e-test-and-merge.yml
archive/: Dockerfile  docker-compose.aws-mock.yml  docker-compose.eb-mock.yml  start-worker.sh
client/: package-lock.json  package.json  tailwind.config.js
client/app/components/: Layout.tsx  PDFUpload.tsx  StatusList.tsx  alert.tsx
client/lib/: api_client.ts
datarecon-client/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
datarecon-client/app/: layout.tsx  page.tsx
datarecon-client/app/components/: invoice-table.tsx  weight-comparison.tsx
datarecon-client/app/lib/: api_client.ts  utils.ts
datarecon-client/shared/: schema.ts
deployment/: __init__.py  config-update-state-machine-optimized.json  config-update-state-machine-simplified-v1.4.json  gateway-state-machine-optimized.json
deployment/aws/: README_API_GATEWAY.md  __init__.py
deployment/aws/cleanup/: __init__.py  cleanup_manager.py  orphan_detector.py
deployment/aws/cli/: scaling_status.py
deployment/aws/infrastructure/: __init__.py  ami_build_guide.md  console_validator.py  ec2_database.py  ecs.py  ecs.py.backup  ecs_scaling.py  ecs_scaling_manager.py  efs.py  (+4 more)
deployment/kubernetes/: README.md
files-api-client/app/: globals.css  layout.tsx  page.tsx
files-api-client/lib/: api_client.ts
files-api-client/types/: invoice.ts
files_api_client/lib/: api_client.ts
iot-admin-client/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
iot-admin-client/app/: page.tsx
iot-admin-client/shared/: schema.ts
iot-client-admin/: package-lock.json  package.json
iot-client-admin/app/: layout.tsx
iot-client-admin/shared/: schema.ts
iot-client-admin/styles/: app.css  globals.css
src/cloud_course_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/database/: event_store.py  indexes.py  local.py  mongo_adapter.py  nosql_adapter.py  schemas.py  sqlite_http_adapter.py
src/datarecon/: lambda_handler.py  main.py  routes.py  schemas.py  settings.py
src/files_api/: README.md  cli.py  config.py  dependencies.py  docker-compose.aws-mock.yml  docker-compose.aws-prod.yml  docker-compose.eb-mock.yml  docker-compose.ecs-mock.yml  env_helper.py  errors.py  lambda_handler.py  main.py  msg_queue.py  recycling.db  routes.py  schemas.py  settings.py  storage_adapter.py
src/iot/: README.md  cli.py  config.py  docker-compose.yml  lambda_handler.py  main.py  models.py  routes.py
src/vlm_workers/: __init__.py  aws_worker.py  cli.py  requirements.txt  worker.py
src/wastemgt_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  utils.py
tests/e2e/: test_gateway_lifecycle.py  test_invoice_e2e.py  test_nosql_integration.py
tests/fixtures/: api_client.py  db_client.py  iot_fixtures.py  mocked_aws.py  nosql_fixtures.py  rag_fixtures.py
tests/unit_tests/: test__routes__error_cases.py  test__routes__happy_path.py  test_nosql_operations.py
(+157 files in other folders)
